app/modules/kube/manifests/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 443
      targetPort: 3000
